@@ -1,5 +1,8 @@
 2000-06-07  Dave Peticolas  <dave@krondo.com>
 
+	* src/SplitLedger.c: use value, not share amount, for debit/credit
+	cells in equity registers.
+
 	* src/gnome/dialog-utils.c (gnc_ui_install_field_strings): set the
 	code even if it's blank. Auto-coding doesn't work right now.
 
